Added 2 recipes based off template to increase recipe variety

--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>
-        <a href="./recipes/epplant_parm.html" target="_self"
+    <ul>
+        <li>
+            <a href="./recipes/epplant_parm.html" target="_self"
         rel="noopener noreferrer">Eggplant Parm Recipe</a>
-    </p>
+        </li>
+        <li>
+            <a href="./recipes/sesame_noodles.html" target="_self"
+        rel="noopener noreferrer">Sesame Noodle Recipe</a>
+        </li>
+        <li>
+            <a href="./recipes/cereal.html" target="_self"
+        rel="noopener noreferrer">Cereal Recipe</a>
+        </li>
+    </ul>
 </body>
 </html>
