added styles to style.css to add positional styles to recipe site

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,39 @@
     <title>Main Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li>
+    <div class="recipeList">
+        <ul>
+            <li>
+                <a href="./recipes/epplant_parm.html" target="_self" rel="noopener noreferrer">Eggplant Parm Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/sesame_noodles.html" target="_self" rel="noopener noreferrer">Sesame Noodle
+                    Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/cereal.html" target="_self" rel="noopener noreferrer">Cereal Recipe</a>
+            </li>
+        </ul>
+    </div>
+
+
+    <div class="recipeBoxes">
+        <p class="funBox eggplantParm">
             <a href="./recipes/epplant_parm.html" target="_self"
-        rel="noopener noreferrer">Eggplant Parm Recipe</a>
-        </li>
-        <li>
+                rel="noopener noreferrer">Eggplant Parm Recipe</a>
+        </p>
+        <p class="funBox sesameNoodles">
             <a href="./recipes/sesame_noodles.html" target="_self"
-        rel="noopener noreferrer">Sesame Noodle Recipe</a>
-        </li>
-        <li>
-            <a href="./recipes/cereal.html" target="_self"
-        rel="noopener noreferrer">Cereal Recipe</a>
-        </li>
-    </ul>
+                rel="noopener noreferrer">Sesame Noodle Recipe</a>
+        </p>
+        <p class="funBox cereal">
+            <a href="./recipes/cereal.html" target="_self" rel="noopener noreferrer">Cereal
+                Recipe</a>
+        </p>
+    </div>
 </body>
+
 </html>
